--- a/sass/index.scss
+++ b/sass/index.scss
@@ -13,7 +13,7 @@ body {
 
     > main {
         flex: 1 0 auto;
-        @include mixin.margin-y( unset );
+        margin: unset;
     }
 
     > aside {
